--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
   <%= render 'home/features' %>
 
   <!-- Testimonials -->
-  <%= render 'home/testimonials' %>
+  <%# render 'home/testimonials' %>
 
   <!-- CTA Section -->
   <%= render 'home/cta' %>
